--- a/src/DB.properties
+++ b/src/DB.properties
@@ -1,4 +1,4 @@
 DB_CLASS_NAME=com.mysql.jdbc.Driver
 DB_URL=jdbc\:mysql\://localhost\:3306/student_db
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=123456
